--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -432,8 +432,11 @@ body {
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
-  color: #666;
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+  color: black;
+  background: black url(../images/body-bg.jpg) 0 0 repeat;
+
+
+
 }
 
 p {
@@ -441,7 +444,7 @@ p {
 }
 
 a {
-  color: #2879d0;
+  color: green;
 }
 a:hover {
   color: #2268b2;
@@ -462,7 +465,7 @@ header h1 {
   font-size: 72px;
   font-weight: normal;
   line-height: 1;
-  color: #fff;
+  color: pink;
   letter-spacing: -1px;
 }
 
@@ -871,6 +874,7 @@ footer a:hover {
     margin-left: 0;
     content: none;
   }
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dGpZEuXoFWw" frameborder="0" allowfullscreen></iframe>
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@@ -878,4 +882,3 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
-
